--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "compass-mixins": "^0.12.10",
     "flag-icon-css": "^3.3.0",
     "font-awesome": "^4.7.0",
+    "highcharts": "^6.2.0",
     "ionicons": "^4.5.8",
     "jquery": "^3.4.1",
     "mdi": "^2.2.43",
@@ -41,6 +42,7 @@
     "vue-star-rating": "^1.6.1",
     "vue-sweetalert2": "^1.6.4",
     "vue2-ace-editor": "0.0.13",
+    "vue2-highcharts": "^1.2.5",
     "vuejs-datepicker": "^1.5.4",
     "vuex": "^3.6.2",
     "vuex-persistedstate": "^4.0.0-beta.3"
