--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "ti-icons": "^0.1.2",
     "typicons.font": "^2.0.9",
     "vue": "^2.6.10",
+    "vue-advanced-chat": "^0.8.6",
     "vue-chartjs": "^3.4.2",
     "vue-clock-picker": "^0.4.2",
     "vue-codemirror": "^4.0.6",
@@ -115,7 +116,7 @@
     "vue-template-compiler": "^2.6.10",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-server": "^3.1.11",
+    "webpack-dev-server": "^2.11.5",
     "webpack-merge": "^4.2.1"
   },
   "engines": {
