--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -1,30 +1,23 @@
 name: deploying ushauri_test instance
 on:
   push:
-    branches: [ master ]
+    branches: [master]
 jobs:
-
   build:
     name: Deploy
     runs-on: ubuntu-latest
     steps:
-    - name: executing remote connection
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USERNAME }}
-        key: ${{ secrets.CICD_SECRET }}
-        port: ${{ secrets.PORT }}
-        script: |
-          git config --global --add safe.directory /apps/github-workflows/mhealth-apps/nishauri/      
-          cd /apps/github-workflows/mhealth-apps/nishauri/
-          git pull origin main
-          git status
-          cp  /apps/configs/nishauri/node.dockerfile /apps/github-workflows/mhealth-apps/nishauri/
-          cp  /apps/configs/nishauri/.env /apps/github-workflows/mhealth-apps/nishauri/
-          cp  /apps/configs/nishauri/nginx.dockerfile /apps/github-workflows/mhealth-apps/nishauri/
-          cp -r /apps/configs/nishauri/nginx/ /apps/github-workflows/mhealth-apps/nishauri/
-          cp  /apps/configs/nishauri/docker-compose.yml /apps/github-workflows/mhealth-apps/nishauri/
-          docker-compose down
-          docker-compose rm -f
-          docker-compose up -d
+      - name: executing remote connection
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.CICD_SECRET }}
+          port: ${{ secrets.PORT }}
+          script: |
+            git config --global --add safe.directory /apps/github-workflows/mhealth-apps/nishauri/      
+            cd /apps/github-workflows/mhealth-apps/nishauri/
+            git pull origin main
+            git status
+            docker build -t nishauritest:latest .
+            docker run -p 8005:80 -d --name=nishauritest --restart always nishauritest:latest
