--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -1,7 +1,7 @@
 name: deploying ushauri_test instance
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
 jobs:
   build:
     name: Deploy
